--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,8 @@
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
-         stopOnFailure="false">
+         stopOnFailure="false"
+         printerClass="vxm\tests\unit\mfa\ResultPrinter">
     <testsuites>
         <testsuite name="Test Suite">
             <directory>./tests</directory>
