--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=7.1",
         "yiisoft/yii2": ">=2.0.13",
-        "spomky-labs/otphp": "*"
+        "spomky-labs/otphp": "^9.0"
     },
     "autoload": {
         "psr-4": {
